# KAZU

./: .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .vulture_whitelist.py  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  NEWS.md  README.md  conftest.py  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: build-production.yml  build-staging.yml  check_for_dead_code.yml  deploy-dev.yaml  deploy-github-pages.yaml  integration_test.yml  latest_model_pack_path.py  precommit_and_docs_build_check.yml  release.yml  run_acceptance_tests.py  temporary-deployment.yaml
.streamlit/: config.toml
azner/: setup.py
azner/conf/: config.yaml
azner/data/: data.py  pytorch.py
azner/modelling/: hf_lightning_wrappers.py
azner/pipeline/: pipeline.py
azner/steps/: __init__.py
azner/tests/: test_abbreviation_expansion.py  test_acceptance_test.py  test_azner_runner.py  test_bio_label_parser.py  test_bio_label_preprocessor.py  test_caching.py  test_configs.py  test_data.py  test_dictionary_linking.py  test_distillation_training.py  test_embedding_index.py  test_full_pipeline_acceptance_test.py  test_hf_token_classification.py  test_link_ensembling.py  test_linking_acceptance_test.py  test_linking_steps.py  test_pipeline.py  test_sapbert.py  test_server.py  test_string_preprocessor_step.py  utils.py
azner/utils/: caching.py  dictionary_index.py  embedding_index.py  link_index.py  stopwatch.py  utils.py
azner/web/: routes.py  server.py
deploy/: Dockerfile  kazu-tests.postman_collection.json
deploy/temporary/: Dockerfile
docs/: apidocs.rst  changelog.md  changelog.rst  conf.py  curating_a_knowledgebase.rst  curating_for_explosion.rst  datamodel.rst  default_pipeline.rst  development_setup.rst  index.rst  introduction.rst  kazu_as_a_library.rst  kazu_resource_tool.rst  kazu_webservice.rst  label_studio_create_project.py  label_studio_export_project.py  label_studio_integration.rst  ontology_parser.rst  pipeline_example.py  pipeline_example.rst  quickstart.rst  scaling_kazu.rst  single_step_example.rst  steps.rst  training.rst  training_multilabel_ner.rst
docs/_autosummary/: kazu.data.data.rst  kazu.data.pytorch.rst  kazu.modelling.annotation.acceptance_test.rst  kazu.modelling.annotation.label_studio.rst  kazu.modelling.annotation.rst  kazu.modelling.distillation.metrics.rst  kazu.modelling.distillation.rst  kazu.modelling.distillation.tiny_transformers.rst  kazu.modelling.hf_lightning_wrappers.rst  kazu.modelling.language.language_phenomena.rst  kazu.modelling.language.string_similarity_scorers.rst  kazu.modelling.linking.sapbert.train.rst  kazu.modelling.ontology_matching.assemble_pipeline.rst  kazu.modelling.ontology_matching.ontology_matcher.rst  kazu.modelling.ontology_matching.rst  kazu.modelling.ontology_preprocessing.rst  kazu.modelling.ontology_preprocessing.synonym_generation.rst  kazu.modelling.rst  kazu.pipeline.pipeline.rst  kazu.rst  kazu.runner.rst  kazu.steps.base.rst  kazu.steps.document_post_processing.abbreviation_finder.rst  kazu.steps.linking.dictionary.rst  kazu.steps.linking.post_processing.disambiguation.context_scoring.rst  kazu.steps.linking.post_processing.disambiguation.strategies.rst  kazu.steps.linking.post_processing.mapping_strategies.strategies.rst  kazu.steps.linking.post_processing.rst  kazu.steps.linking.post_processing.xref_manager.rst  kazu.steps.linking.rst  kazu.steps.ner.hf_token_classification.rst  kazu.steps.ner.rst  kazu.steps.ner.tokenized_word_processor.rst  kazu.steps.other.rst  kazu.steps.other.stanza.rst  kazu.steps.rst  kazu.steps.step.rst  kazu.steps.string_preprocessing.rst  kazu.steps.string_preprocessing.scispacy_abbreviation_expansion.rst  kazu.utils.abbreviation_detector.rst  (+12 more)
docs/_changelog.d/: +SpacyToKazuObjectMapper.removal.md  +acceptancetesturistripping.bugfix.rst  +added_frontend.feature.rst  +added_towncrier.doc.rst  +allstepsdeps.feature.md  +api_endpoint_dep.removal.rst  +biotypefilter.feature.rst  +buggedmatcherrules.bugfix.rst  +call_docs.feature.rst  +create_phrasematchers_rename.removal.md  +createphrasematchersremoval.removal.md  +curation.feature.md  +curationoverhaul.feature.rst  +curationreport.feature.rst  +curations.bugfix.rst  +curations.feature.rst  +dataclassdocs.doc.rst  +datamodelchange.feature.md  +deadcode.removal.rst  +ded.feature.rst  +deprecate-replace-dashes.removal.md  +deprecatediterable.bugfix.rst  +deserialisation.feature.rst  +diskcache.feature.rst  +docformatter.doc.rst  +docs_index_update.doc.rst  +docs_on_release.doc.rst  +donwloader.feature.rst  +doubleparserpopulate.bugfix.md  +dropmappings.feature.rst  +excludekazutested_dependencies.bugfix.md  +fixbrokenimports.bugfix.rst  +gilda.feature.rst  +gliner.feature.md  +improvedgenegrouping.feature.rst  +improvelogging.feature.rst  +improvespacytokenization.feature.rst  +inheritedtermbehaviour.feature.rst  +jsontypehint.removal.rst  +knowngooddeps.feature.rst  (+57 more)
docs/_ext/: cross_reference_override.py
frontend/: Dockerfile  README.md  nginx.template  package-lock.json  package.json  start-server.sh
frontend/public/: index.html
frontend/src/: config.json  config.ts  index.css  index.tsx  labelstudio.css
kazu-jvm/: README.md  build.gradle  settings.gradle
kazu/annotation/: acceptance_test.py  label_studio.py
kazu/conf/: ExplosionStringMatchingStep  __init__.py  config.yaml
kazu/data/: __init__.py  data.py  pytorch.py
kazu/database/: in_memory_db.py
kazu/distillation/: dataprocessor.py  lightning_plugins.py  metrics.py  models.py  tiny_transformers.py  train.py
kazu/krt/: __init__.py  components.py  resource_manager.py  utils.py
kazu/language/: language_phenomena.py  string_similarity_scorers.py
kazu/modelling/: hf_lightning_wrappers.py
kazu/ontology_matching/: LICENSE  assemble_pipeline.py  ontology_matcher.py
kazu/ontology_preprocessing/: autocuration.py  base.py  constants.py  curation_utils.py  downloads.py  ontology_upgrade_report.py  parsers.py  synonym_generation.py
kazu/pipeline/: __init__.py  pipeline.py
krt/: Introduction.py
(+2675 files in other folders)
