[project]
name = "kazu"
dynamic = ["version"]
description = "Biomedical Named Entity Recognition and Entity Linking for Enterprise use cases"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "AstraZeneca AI and Korea University"}
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Typing :: Typed",
    "Operating System :: OS Independent",
    "Intended Audience :: Healthcare Industry",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
  "spacy>=3.2.2",
  "torch>=2.0.0",
  "transformers>=4.0.0",
  "rdflib>=6.0.0",
  "requests>=2.20.0",
  "hydra-core>=1.3.0",
  "pytorch-lightning>=1.7.4,<2.0.0",
  "pandas>=1.0.0",
  "pyarrow>=8.0.0",
  "pymongo>=4.3.3",
  "rapidfuzz>=1.0.0",
  "py4j>=0.10.9",
  "scikit-learn>=0.24.0",
  "stanza>=1.0.0",
  "regex>=2020.1.7",
  "psutil>=5.3.0",
  "cachetools>=5.2.0",
  "diskcache>=5.4.0"
]

[project.urls]
documentation = "https://astrazeneca.github.io/KAZU/index.html"
repository = "https://github.com/AstraZeneca/KAZU"

[project.optional-dependencies]
webserver = [
  "fastapi<0.99.0",  # newer than this breaks our 'examples' in the Swagger page
  "pydantic<2.0",
  "ray[serve]>=1.10.0,<2.5",
  "PyJWT>=2.0.0",
  ]
typed = [
  "types-requests",
  "types-cachetools",
  "types-regex",
  "types-psutil",
  "types-docutils",
  "pandas-stubs>=2.0.0",
]
model_training = [
  "pytorch-metric-learning>=0.9.99",
  "seqeval>=1.0.0",
]
dev = [
  "kazu[webserver,typed,model_training]",
  "black~=22.0",
  "blacken-docs",
  "flake8",
  "mypy",
  "vulture",
  "bump2version",
  "pre-commit",
  "pytest",
  "pytest-mock",
  "pytest-cov",
  "pytest-timeout",
  "sphinx<7.2",
  "myst_parser",
  "furo",
  # to allow profiling
  # of the steps.
  "tensorboard",
  "towncrier",
  "ray>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["/kazu"]
exclude = ["/kazu/tests"]

[tool.hatch.version]
path = "kazu/__init__.py"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | .idea
    | .pytest_cache
  )/
)
'''

[tool.docformatter]
black = true
recursive = true
in-place = true

[tool.pytest.ini_options]
testpaths = "kazu/tests"
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::SyntaxWarning",
]

[tool.mypy]
strict = true
warn_unreachable = true
# these are too noisy for us with our existing codebase
disallow_untyped_defs = false
disallow_any_generics = false
disallow_untyped_calls = false
no_implicit_reexport = false

[[tool.mypy.overrides]]
module = [
    "seqeval.*",
    "transformers.*",
    "tokenizers.*",
    "stanza.*",
    "sklearn.*",
    "pytorch_metric_learning.*",
    "srsly.*",
    "py4j.*",
    "diskcache.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "kazu.tests.*"
]
# in particular, return types for pytest test
# functions are always None, we don't want to have to annotate that
disallow_incomplete_defs = false

[tool.towncrier]
package = "kazu"
directory = "docs/_changelog.d"
package-dir = "kazu"
filename = "CHANGELOG.md"
template = "docs/_changelog.d/changelog_template.jinja"
title_format = "## {version} - {project_date}"
underlines = ["", "", ""]
start_string= "<!-- towncrier release notes start -->\n"

[tool.vulture]
exclude = ["kazu/tests/*"]
make_whitelist = false
# we may need to change this to 80 or 100 if we find it too noisy
min_confidence = 60
paths = ["kazu", ".vulture_whitelist.py"]
